--- a/Autocomplete.TCC.NGramas.ipynb
+++ b/Autocomplete.TCC.NGramas.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This notebook was created and adapted for the work of generating suggestions using some ideas and codes as reference the notebook of the author \"Saurav Mangeshkar\" available at: \n",
+    "#### This notebook was created and adapted for the work of generating suggestions using some ideas and codes as reference the notebook of the author \"Mangeshkar, Saurav\" available at: \n",
     "https://www.kaggle.com/sauravmaheshkar/auto-completion-using-n-gram-models"
    ]
   },
@@ -257,14 +257,11 @@
     "    \n",
     "    C_SHARP_CLASS_FILE_EXTENSION = \".cs\"\n",
     "    \n",
-    "    # List with complete path for all C# files.\n",
     "    complete_name_of_files = []\n",
     "\n",
-    "    # Loop for all files with C# class extension.\n",
     "    for root, dirs, files in os.walk(root_directory):\n",
     "        for file in files:\n",
     "            if file.endswith(C_SHARP_CLASS_FILE_EXTENSION):\n",
-    "                # Append the file name to the list\n",
     "                complete_name_of_files.append(os.path.join(root, file))\n",
     "    \n",
     "    return complete_name_of_files"
@@ -318,27 +315,19 @@
     "    :returns - Type(List): List of tokens.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Constant to replace numbers in tokens.\n",
     "    MASK_NUMBERS = \"|mask_number|\"\n",
     "    \n",
-    "    # Split by new line character.\n",
     "    code_sentences = source_code.split('\\n')\n",
     "    \n",
-    "    # Remove leading and trailing spaces.\n",
     "    code_sentences = [c.strip() for c in code_sentences]\n",
     "    \n",
-    "    # Drop empty sentences.\n",
     "    code_sentences = [c for c in code_sentences if len(c) > 0]\n",
     "    \n",
-    "    # Empty list to hold tokens after ntlk process.\n",
     "    tokens = []\n",
     "    \n",
-    "    # Iterate through code sentences.\n",
     "    for piece_of_code  in code_sentences:\n",
-    "        # Convert to a list of words.\n",
     "        token = nltk.word_tokenize(piece_of_code)\n",
-    "        \n",
-    "        # Replace sequence of numbers to mask.\n",
+    "\n",
     "        for i in range(len(token)):\n",
     "            token[i] = replace_sequence_of_numbers_for_mask(\n",
     "                            token[i],\n",
@@ -488,14 +477,11 @@
     "    \n",
     "    :returns - Type(List, List): Tokens list and Vocabulary list.\n",
     "    \"\"\"\n",
-    "        \n",
-    "    # Auxiliar tokens to copy\n",
-    "    tokens_aux = tokens[:]\n",
     "    \n",
-    "    # Get closed Vocabulary\n",
+    "    tokens_aux = tokens[:]\n",
+    "\n",
     "    vocabulary = handling_out_of_code_vocabulary(tokens_aux, count_threshold)\n",
     "\n",
-    "    # Updated training dataset\n",
     "    new_token_data = unknown_tokenize(tokens_aux, vocabulary)\n",
     "\n",
     "    return new_token_data, vocabulary"
@@ -560,25 +546,18 @@
     "    :returns - Type(Float): Probability of a single word.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Convert the previous_n_gram into a tuple \n",
     "    previous_n_gram = tuple(previous_n_gram)\n",
     "\n",
-    "    # Calculating the count, if exists from our freq dictionary otherwise zero\n",
     "    previous_n_gram_count = n_gram_counts[previous_n_gram] if previous_n_gram in n_gram_counts else 0\n",
     "\n",
-    "    # The Denominator\n",
     "    denom = previous_n_gram_count + k * vocabulary_size\n",
     "\n",
-    "    # previous n-gram plus the current word as a tuple\n",
     "    nplus1_gram = previous_n_gram + (word,)\n",
     "\n",
-    "    # Calculating the nplus1 count, if exists from our freq dictionary otherwise zero \n",
     "    nplus1_gram_count = nplus1_gram_counts[nplus1_gram] if nplus1_gram in nplus1_gram_counts else 0\n",
     "\n",
-    "    # Numerator\n",
     "    num = nplus1_gram_count + k\n",
     "\n",
-    "    # Final Fraction\n",
     "    prob = num / denom\n",
     "    return prob"
    ]
@@ -602,26 +581,18 @@
     "    :returns - Type(Float): Probability of next n-gram.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Convert to Tuple\n",
     "    previous_n_gram = tuple(previous_n_gram)\n",
     "\n",
-    "    # Add end and unknown tokens to the vocabulary\n",
     "    vocabulary = vocabulary + [\"<e>\", \"<unk>\"]\n",
     "\n",
-    "    # Calculate the size of the vocabulary\n",
     "    vocabulary_size = len(vocabulary)\n",
     "\n",
-    "    # Empty dict for probabilites\n",
     "    probabilities = {}\n",
     "\n",
-    "    # Iterate over words \n",
     "    for word in vocabulary:\n",
-    "\n",
-    "        # Calculate probability\n",
     "        probability = prob_for_single_word(word, previous_n_gram, \n",
     "                                               n_gram_counts, nplus1_gram_counts, \n",
     "                                               vocabulary_size, k=k)\n",
-    "        # Create mapping: word -> probability\n",
     "        probabilities[word] = probability\n",
     "\n",
     "    return probabilities"
@@ -646,23 +617,16 @@
     "    :returns - Type(String, Float): Next token and probability.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # length of previous words\n",
     "    n = len(list(n_gram_counts.keys())[0]) \n",
     "\n",
-    "    # most recent 'n' words\n",
     "    previous_n_gram = previous_tokens[-n:]\n",
     "\n",
-    "    # Calculate probabilty for all words\n",
     "    probabilities = probs(previous_n_gram,n_gram_counts, nplus1_gram_counts,vocabulary, k=k)\n",
     "\n",
-    "    # Intialize the suggestion and max probability\n",
     "    suggestion = None\n",
     "    max_prob = 0\n",
     "\n",
-    "    # Iterate over all words and probabilites, returning the max.\n",
-    "    # We also add a check if the start_with parameter is provided\n",
     "    for word, prob in probabilities.items():\n",
-    "\n",
     "        if start_with != None: \n",
     "\n",
     "            if not word.startswith(start_with):\n",
@@ -694,26 +658,19 @@
     "    :returns - Type(String, Float): Next token and probability.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # See how many models we have\n",
     "    count = len(n_gram_counts_list)\n",
     "    \n",
-    "    # Empty list for suggestions\n",
     "    suggestions = []\n",
     "    \n",
-    "    # IMP: Earlier \"-1\"\n",
-    "    \n",
-    "    # Loop over counts\n",
     "    for i in range(count-1):\n",
-    "        \n",
-    "        # get n and nplus1 counts\n",
     "        n_gram_counts = n_gram_counts_list[i]\n",
+    "        \n",
     "        nplus1_gram_counts = n_gram_counts_list[i+1]\n",
     "        \n",
-    "        # get suggestions \n",
     "        suggestion = auto_complete(previous_tokens, n_gram_counts,\n",
     "                                    nplus1_gram_counts, vocabulary,\n",
     "                                    k=k, start_with=start_with)\n",
-    "        # Append to list\n",
+    "        \n",
     "        suggestions.append(suggestion)\n",
     "        \n",
     "    return suggestions"
@@ -840,11 +797,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "####################################\n",
+      "First 50 tokens:\n",
+      "####################################\n",
+      "['//', 'Licensed', 'to', 'the', '.NET', 'Foundation', 'under', 'one', 'or', 'more', 'agreements', '.']\n",
+      "['//', 'The', '.NET', 'Foundation', 'licenses', 'this', 'file', 'to', 'you', 'under', 'the', 'MIT', 'license', '.']\n",
+      "['//', 'See', 'the', 'LICENSE', 'file', 'in', 'the', 'project', 'root', 'for', 'more', 'information', '.']\n",
+      "['namespace', 'RunTests']\n",
+      "['{']\n",
+      "['public', 'class', 'ProcessResult']\n",
+      "['{']\n",
+      "['public', 'ProcessResult', '(', 'string', 'standardOutput', ',', 'string', 'standardError', ',', 'int', 'exitCode', ')']\n",
+      "['{']\n",
+      "['StandardOutput', '=', 'standardOutput', ';']\n",
+      "['StandardError', '=', 'standardError', ';']\n",
+      "['ExitCode', '=', 'exitCode', ';']\n",
+      "['}']\n",
+      "['public', 'string', 'StandardOutput', '{', 'get', ';', '}']\n",
+      "['public', 'string', 'StandardError', '{', 'get', ';', '}']\n",
+      "['public', 'int', 'ExitCode', '{', 'get', ';', '}']\n",
+      "['}']\n",
+      "['}']\n",
+      "['//', 'Licensed', 'to', 'the', '.NET', 'Foundation', 'under', 'one', 'or', 'more', 'agreements', '.']\n",
+      "['//', 'The', '.NET', 'Foundation', 'licenses', 'this', 'file', 'to', 'you', 'under', 'the', 'MIT', 'license', '.']\n",
+      "['//', 'See', 'the', 'LICENSE', 'file', 'in', 'the', 'project', 'root', 'for', 'more', 'information', '.']\n",
+      "['using', 'System', ';']\n",
+      "['using', 'System.Collections.Generic', ';']\n",
+      "['using', 'System.Diagnostics', ';']\n",
+      "['using', 'System.IO', ';']\n",
+      "['using', 'System.Runtime.InteropServices', ';']\n",
+      "['using', 'System.Text', ';']\n",
+      "['using', 'System.Threading', ';']\n",
+      "['using', 'System.Threading.Tasks', ';']\n",
+      "['#', 'nullable', 'enable']\n",
+      "['namespace', 'RunTests']\n",
+      "['{']\n",
+      "['public', 'static', 'class', 'ProcessUtil']\n",
+      "['{']\n",
+      "['[', 'DllImport', '(', '``', 'libc', \"''\", ',', 'SetLastError', '=', 'true', ',', 'EntryPoint', '=', '``', 'kill', \"''\", ')', ']']\n",
+      "['private', 'static', 'extern', 'int', 'sys_kill', '(', 'int', 'pid', ',', 'int', 'sig', ')', ';']\n",
+      "['public', 'static', 'Task', 'CaptureDumpAsync', '(', ')']\n",
+      "['{']\n",
+      "['var', 'dumpDirectoryPath', '=', 'Environment.GetEnvironmentVariable', '(', '``', 'HELIX_DUMP_FOLDER', \"''\", ')', ';']\n",
+      "['if', '(', 'dumpDirectoryPath', '==', 'null', ')']\n",
+      "['{']\n",
+      "['return', 'Task.CompletedTask', ';']\n",
+      "['}']\n",
+      "['var', 'process', '=', 'Process.GetCurrentProcess', '(', ')', ';']\n",
+      "['var', 'dumpFilePath', '=', 'Path.Combine', '(', 'dumpDirectoryPath', ',', '$', \"''\", '{', 'process.ProcessName', '}', '-', '{', 'process.Id', '}', '.dmp', \"''\", ')', ';']\n",
+      "['return', 'CaptureDumpAsync', '(', 'process.Id', ',', 'dumpFilePath', ')', ';']\n",
+      "['}']\n",
+      "['public', 'static', 'Task', 'CaptureDumpAsync', '(', 'int', 'pid', ')']\n",
+      "['{']\n",
+      "['var', 'dumpDirectoryPath', '=', 'Environment.GetEnvironmentVariable', '(', '``', 'HELIX_DUMP_FOLDER', \"''\", ')', ';']\n"
+     ]
+    }
+   ],
    "source": [
     "tokens = tokenize_all_files(c_sharp_code_corpus, first_x_corpus=0)\n",
     "\n",
@@ -862,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,11 +915,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('void', 0.1493224623348062)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "previous_tokens = [\"ReadFile\", \"(\"]\n",
+    "previous_tokens = [\"public\"]\n",
     "suggestion = get_suggestions(previous_tokens, n_gram_counts_list, vocabulary, k=1.0)\n",
     "\n",
     "display(suggestion)"
